--- a/_config.yml
+++ b/_config.yml
@@ -89,7 +89,7 @@ mathjax: true # false (default), true
 mathjax_autoNumber: true # false (default), true
 
 ## Mermaid
-mermaid: false # false (default), true
+mermaid: true # false (default), true
 
 ## Chart
 chart: true # false (default), true
